--- a/.env
+++ b/.env
@@ -13,4 +13,5 @@ VITE_appId=1:605548560450:web:8918a1b3f3de2596f5addb
 # appId: "1:605548560450:web:8918a1b3f3de2596f5addb"
 
 
-VITE_API_URL=http://localhost:5000
+# VITE_API_URL_DEV=http://localhost:5000
+VITE_API_URL=https://taskyear-server.vercel.app
